kimai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kimai
spec:
  selector:
    app: kimai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
